<resources xmlns:tools="http://schemas.android.com/tools">

    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"></style>

    <string name="app_name">CoEquality</string>
    <string name="coequality" translatable="false">CoEquality</string>
    <string name="start">Start</string>
    <string name="todo">TODO</string>
    <string name="text_will_appear_here" translatable="false">Text will appear here</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="vibration_tool">Vibration Tool</string>
    <string name="language">Change Language</string>
    <string name="theme">Theme</string>
    <string name="about_us">About Us</string>
    <string name="exit">Exit</string>
    <string name="choose_language">Choose Language</string>
    <string name="confirm_password">Please confirm your password</string>
    <string name="picture_voice">Picture Voice</string>
    <string name="speech_to_text">Speech-To-Text</string>
    <string name="please_select_an_activity">Please select an activity</string>
    <string name="aboutus">"Welcome to CoEquality" "\n" "\n" "This application contains the following utilities:" "\n" "\n"
        "Light sensor: Utility used to assist the partially sighted in determining the light level of their environment"
        "\n" "\n"
        "Speech-To-Text Tool: Utility used to assist the partially deaf to allow for easy communication and understanding when talking to others"
        "\n" "\n"
        "Picture Voice: Utility used to assist the development of autistic members of society and children by having audio of the image name be narrated back on click"
        "\n" "\n"
        "Vibration Tool: Utility used to assist the users who require haptic feedback. Contains different buttons which output different vibration lengths and patterns"
        "\n" "\n"
        "Image Recognition: Utility used to identify objects that are distinguishable within an image. Any image will attempt to have the object recognised whether it be taken straight from the camera or chosen from the gallery. Useful for users with partial blindness needing to see whats in an image as there is narration as well"</string>
    <string name="identify_image">Identify Image</string>
    <string name="reset">Reset App</string>
    <string name="return_to_menu">Return to Menu</string>
</resources>