<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainmenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".mainmenu">

        <TextView
            android:id="@+id/menuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/kaushan_script"
            android:includeFontPadding="false"
            android:text="@string/coequality"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="259dp"
            android:layout_height="67dp"
            android:layout_marginTop="336dp"
            android:fontFamily="@font/kaushan_script"
            android:onClick="goToToolSelect"
            android:background="@drawable/rounded_corners"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuTitle" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="167dp"
            android:layout_height="66dp"
            android:layout_marginTop="39dp"
            android:fontFamily="@font/kaushan_script"
            android:onClick="exitApp"
            android:background="@drawable/rounded_corners"
            android:text="@string/exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="227dp"
            android:layout_height="233dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuTitle"
            app:srcCompat="@drawable/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>