<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:theme="@style/Theme.AppCompat.DayNight"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".toolselect">

    <LinearLayout
        android:id="@+id/toolSelect"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="97dp"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:fontFamily="@font/kaushan_script"
                android:text="CoEquality"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitle"
                android:layout_marginLeft="65dp"
                android:fontFamily="@font/kaushan_script"
                android:text="@string/please_select_an_activity"
                android:textColor="@color/black"
                android:textSize="22sp" />

        </RelativeLayout>

        <GridLayout
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="goToLightSensor"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:background="@android:color/transparent"
                        android:onClick="goToLightSensor"
                        android:src="@drawable/lightsensor"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/kaushan_script"
                        android:onClick="goToLightSensor"
                        android:text="@string/light_sensor"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>




            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="goToSpeechText"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:onClick="goToSpeechText"
                        android:src="@drawable/speechtotext"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/kaushan_script"
                        android:onClick="goToSpeechText"
                        android:text="@string/speech_to_text"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="goToPictureVoice"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:onClick="goToPictureVoice"
                        android:src="@drawable/picturevoice" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/kaushan_script"
                        android:onClick="goToPictureVoice"
                        android:text="@string/picture_voice"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="goToVibrate"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:onClick="goToVibrate"
                        android:src="@drawable/vibration" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/kaushan_script"
                        android:onClick="goToVibrate"
                        android:text="@string/vibration_tool"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="goToImageRecognition"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:onClick="goToImageRecognition"
                        android:src="@drawable/imagerecognition"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/kaushan_script"
                        android:onClick="goToImageRecognition"
                        android:text="@string/identify_image"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="showLanguageDialog"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:onClick="showLanguageDialog"
                        android:src="@drawable/languages" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/kaushan_script"
                        android:onClick="showLanguageDialog"
                        android:text="@string/language"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="aboutDialog"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:onClick="aboutDialog"
                        android:src="@drawable/aboutus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/kaushan_script"
                        android:onClick="aboutDialog"
                        android:text="@string/about_us"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="chooseTheme"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:onClick="chooseTheme"
                        android:src="@drawable/nightmode"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/kaushan_script"
                        android:onClick="chooseTheme"
                        android:text="@string/theme"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:onClick="resetApp"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:background="@android:color/transparent"
                        android:onClick="resetApp"
                        android:src="@drawable/ic_baseline_delete_24"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/kaushan_script"
                        android:onClick="resetApp"
                        android:text="@string/reset"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="onExit"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:background="@android:color/transparent"
                        android:onClick="onExit"
                        android:src="@drawable/exit"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/kaushan_script"
                        android:onClick="onExit"
                        android:text="@string/exit"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
















        </GridLayout>


    </LinearLayout>



</ScrollView>